# repobox

./: .dogfood-test  .gitignore  .vercelignore  AGENTS.md  Cargo.toml  EDITORIAL.md  ENS_IMPLEMENTATION_STATUS.md  FULL_KNOWLEDGE_SWEEP_SPEC.md  IMPLEMENTATION_SUMMARY.md  KANBAN.md  README.md  REVIEWS.md  VIRTUALS_IMPLEMENTATION.md  debug_parser.rs  install.sh  llms.txt  package.json  pnpm-lock.yaml  test-activity-feed.js  test-invalid-config.yml  test-stats.js  test-valid-config.yml  test-virtuals-config.yml  test_broken_ens.yml  test_complex_config.yml  test_edge_case.yml  test_ens_cli.sh  test_ens_comprehensive.sh  test_ens_debug.rs  test_invalid_yaml.yml  test_unknown_group.yml  test_vitalik_config.yml  vercel.json
.backup-doc-sync/20260324T124755Z/: llms.txt
.github/workflows/: release.yml
.repobox/: config.yml  config.yml.template
.repobox/workflows/: task_basic.yaml
.state/: farcaster-last-guid.txt  repobox-mint-monitor.json  unsigned-push-smoke-result.json
app/: layout.js
contracts/: BugBountyEscrow.abi.json  BugBountyEscrow.sol  GraffitiPool.abi.json  GraffitiPool.sol  OffchainResolver.abi.json  OffchainResolver.sol  RepoBoxFactory.sol  RepoBoxMint.sol  RepoBoxNames.sol  RepoBoxResolver.sol  foundry.toml
contracts/cache/: solidity-files-cache.json  test-failures
contracts/script/: DeployNames.s.sol  DeployOffchainResolver.s.sol
contracts/scripts/: deploy-ens-nft.sh
contracts/src/: RepoBoxMint.sol  RepoBoxNames.sol
contracts/test/: RepoBoxNames.t.sol
docs/: DEMO.md  ENS_PERMISSIONS_USAGE.md  ENS_TESTING.md  README.md  SKILL.md  VIRTUALS_INTEGRATION_SPEC.md
docs/agent-guide/: agent-workflows.md
docs/getting-started/: agent-onboarding.md  first-repo.md  installation.md
docs/reference/: cli-commands.md
docs/spec/: 01-identity.md  02-groups.md  03-permissions.md  04-workflows.md  05-tech-stack.md  06-studio-migration.md  07-install-script.md  08-x402-paid-access.md  09-bug-bounties.md  REPO_DETAIL_PAGE_OVERHAUL.md  activity-feed-on-explorer-home.md  append-merge-driver.md  cli-ux-adversarial.md  clone-url-widget.md  contributor-leaderboard.md  dark-light-theme-toggle.md  docs-comprehensive-honest-up-to-date.md  empty-state-illustrations.md  explorer-signer-address.md  file-viewer-syntax-highlighting.md  force-push-handling.md  mobile-responsive-explorer.md  readme-rendering-polish.md  repo-stats-cards.md  search-api.md  server-first-test-matrix.md  test-ens-resolution-end-to-end.md  (+1 more)
lib/: store.js  token.js
public/: SKILL.md  __next.__PAGE__.txt  __next._tree.txt  canvas.js  feed.xml  index.html  index.txt  jellyfish-bg.js  llms.txt  manta-final.json  manta-loop.json  manta-rays.js  manta.json  snake.js  whitepaper.txt
repobox-api/: server.js  subscribers.json
repobox-blog/: build.js  build.sh  package.json  pnpm-lock.yaml
repobox-cli/: Cargo.toml
repobox-cli/src/: check.rs  main.rs
repobox-core/: Cargo.toml
repobox-core/examples/: sign.rs  verify_exact.rs
repobox-core/src/: aliases.rs  config.rs  engine.rs  ens_integration_tests.rs  identity.rs  issues.rs  lib.rs  lint.rs  parser.rs  payment.rs  prompt.rs  resolver.rs  shim.rs  signing.rs  signing_test_auth.rs
repobox-core/tests/: ens_resolution_e2e.rs  ens_resolution_e2e.rs.disabled  virtuals_integration_test.rs
repobox-dashboard/: package.json  pnpm-lock.yaml
repobox-ens-gateway/: .pnpm-build-config.json  README.md  package.json  pnpm-lock.yaml  tsconfig.json
repobox-landing/: ecosystem.config.js  package-lock.json  package.json  pnpm-lock.yaml
repobox-server/: Cargo.toml
repobox-server/src/: auth.rs  db.rs  git.rs  main.rs  resolve.rs  routes.rs  words.rs
repobox-server/tests/: append_only_integration.rs  branch_topology_integration.rs  merge_policy_integration.rs  ownership_integration.rs  signature_integration.rs  smart_http.rs  test_matrix_framework.rs
repobox-server/tests/matrix/: coverage.rs  dimensions.rs  fixtures.rs  mod.rs  runners.rs  scenario.rs
scripts/: demo-e2e.sh  demo-reset.sh  deploy-ens-resolver.sh  docs-consistency-check.sh  extract-signer.py  generate-prompt.rs  monitor-repobox-mints.js  repobox-unsigned-push-smoke.sh  test-force-push.sh  wall-merge.sh
src/: aliases.rs  config.rs  engine.rs  lib.rs  main.rs  parser.rs  shim.rs
tests/: ens_integration_script.sh
tools/: README.md  RSS_TO_FARCASTER.md  build-homepage.sh  daily-activity.sh  deploy-release.sh  gen-balloon.js  generate-case-studies.js  generate-changelog.sh  generate-portfolio.sh  generate-projects.sh  gif-to-ascii.js  release.sh  rss-to-farcaster.sh  sign-commit.sh  weekly-build-report.sh
web/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+283 files in other folders)
