[package]
name = "repobox"
version = "0.1.0"
edition = "2024"
description = "Git permission layer for AI agents"

[[bin]]
name = "repobox"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha3 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
