[package]
name = "repobox-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for repo.box"

[[bin]]
name = "repobox"
path = "src/main.rs"

[[bin]]
name = "repobox-check"
path = "src/check.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rand = "0.8"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
repobox = { package = "repobox-core", path = "../repobox-core" }
