[package]
name = "repobox-core"
version = "0.1.0"
edition = "2024"
description = "Core library for repo.box"

[lib]
name = "repobox"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha3 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros"] }
ureq = "2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
regex = "1"
