[package]
name = "repobox-server"
version = "0.1.0"
edition = "2024"
description = "Git Smart HTTP server for repo.box"

[[bin]]
name = "repobox-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
http = "1"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
repobox = { package = "repobox-core", path = "../repobox-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
sha3 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
hex = "0.4"
repobox = { package = "repobox-core", path = "../repobox-core" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempdir = "0.3"
